prevent unintentional scrollbar

--- a/src/components/Renderer/Renderer.module.scss
+++ b/src/components/Renderer/Renderer.module.scss
@@ -4,7 +4,10 @@
   $list-pad-left: $size-6;
   $li-flex-min-width: $size-40;
 
-  overflow-y: scroll;
+  &.scroll {
+    overflow-y: scroll;
+  }
+
   & * {
     margin: 0px;
   }
